# GTKapp

./: .gitignore  CMakeLists.txt  ReadMe.md  baterry.cpp  main.cpp  mainWindow.h  style.css
src/backend/: CMakeLists.txt  PCI.cpp  battery.cpp  batteryInfo.cpp  batteryInfo.hpp  batteryType(UNUSED).cpp  logger.hpp
src/driver/: Driver.c  ReadMe.md
src/driver/x64/Debug/: KMDF.cer  KMDF.inf  KMDF.sys.recipe  KMDF.vcxproj.FileListAbsolute.txt
src/driver/x64/Debug/KMDF/: KMDF.sys  kmdf.cat
src/frontend/: CMakeLists.txt  helo.hpp  main.cpp  mainWindow.cc  mainWindow.h  myExtraInit.hpp  style.css
